<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="app_screen_host" type="id" />
    <item name="nav_create" type="id" />
    <item name="nav_media" type="id" />
    <item name="nav_build" type="id" />
    <item name="nav_packs" type="id" />
    <item name="create_name_counter" type="id" />
    <item name="create_media_counter" type="id" />
    <item name="create_draft_chip" type="id" />
    <item name="create_drop_icon" type="id" />
    <item name="create_drop_hint" type="id" />
    <item name="create_pick_media" type="id" />
    <item name="create_continue" type="id" />
    <item name="media_mode_photo" type="id" />
    <item name="media_mode_animated" type="id" />
    <item name="media_summary" type="id" />
    <item name="media_add_more" type="id" />
    <item name="media_grid" type="id" />
    <item name="media_detail" type="id" />
    <item name="media_edit_trim" type="id" />
    <item name="media_clear" type="id" />
    <item name="media_continue" type="id" />
    <item name="trim_title" type="id" />
    <item name="trim_indicator" type="id" />
    <item name="trim_preview" type="id" />
    <item name="trim_filename" type="id" />
    <item name="trim_duration" type="id" />
    <item name="trim_range" type="id" />
    <item name="trim_seek" type="id" />
    <item name="trim_end_seek" type="id" />
    <item name="trim_timeline" type="id" />
    <item name="trim_step_back" type="id" />
    <item name="trim_step_forward" type="id" />
    <item name="trim_previous" type="id" />
    <item name="trim_next" type="id" />
    <item name="trim_cancel" type="id" />
    <item name="trim_done" type="id" />
    <item name="build_panel" type="id" />
    <item name="build_summary" type="id" />
    <item name="build_cover" type="id" />
    <item name="build_pack_name" type="id" />
    <item name="build_type" type="id" />
    <item name="build_overall" type="id" />
    <item name="build_progress" type="id" />
    <item name="build_progress_label" type="id" />
    <item name="build_stage" type="id" />
    <item name="build_file_list" type="id" />
    <item name="build_status" type="id" />
    <item name="build_primary" type="id" />
    <item name="build_secondary" type="id" />
    <item name="packs_panel" type="id" />
    <item name="packs_search" type="id" />
    <item name="packs_search_field" type="id" />
    <item name="packs_search_back" type="id" />
    <item name="packs_search_close" type="id" />
    <item name="packs_settings" type="id" />
    <item name="packs_overflow" type="id" />
    <item name="packs_filter_all" type="id" />
    <item name="packs_filter_photo" type="id" />
    <item name="packs_filter_animated" type="id" />
    <item name="packs_stats" type="id" />
    <item name="packs_list" type="id" />
    <item name="packs_empty" type="id" />
    <item name="packs_create_first" type="id" />
    <item name="pack_name_dialog" type="id" />
    <item name="pack_name_dialog_input" type="id" />
    <item name="pack_name_dialog_counter" type="id" />
    <item name="pack_name_dialog_cancel" type="id" />
    <item name="pack_name_dialog_confirm" type="id" />
    <item name="app_settings" type="id" />
    <item name="app_overflow" type="id" />
    <item name="settings_back" type="id" />
    <item name="settings_title" type="id" />
    <item name="settings_theme_system" type="id" />
    <item name="settings_theme_light" type="id" />
    <item name="settings_theme_dark" type="id" />
    <item name="settings_compact" type="id" />
    <item name="settings_quality_smoother" type="id" />
    <item name="settings_quality_balance" type="id" />
    <item name="settings_quality_sharper" type="id" />
    <item name="settings_keep_drafts" type="id" />
    <item name="settings_clear_cache" type="id" />
    <item name="settings_auto_cleanup" type="id" />
    <item name="settings_version" type="id" />
    <item name="settings_privacy" type="id" />
    <item name="settings_help" type="id" />
    <item name="settings_about" type="id" />
    <item name="media_action_remove" type="id" />
    <item name="media_action_cover" type="id" />
</resources>